redefinement-added links on icons for socials and block scoping. fixed responsiveness and page alignment

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -20,3 +20,7 @@ body {
 .wrapper{
   font-family: Merriweather;
 }
+
+section {
+  scroll-margin-block: 50px;
+}
